cfn-templates/vpc-infra-fargate.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  A new VPC creation with EKS and fargate. 1 Main VPC, IGW, NATGW, 2 Public Subnets, 2 Private Subnets (each per AZ), 4 Subnets for Multus

Metadata:
  "AWS::CloudFormation::Interface":
    ParameterGroups:
      - Label:
          default: VPC Configuration
        Parameters:
          - Vpc1Cidr
          - AvailabilityZones
          - PubMgmtSubnetAz1Cidr
          - PubMgmtSubnetAz2Cidr
          - PrivK8sSubnetAz1Cidr
          - PrivK8sSubnetAz2Cidr
      - Label:
          default: Multus networks
        Parameters:
          - MultusSubnet1Az1Cidr
          - MultusSubnet1Az2Cidr
          - MultusSubnet2Az1Cidr
          - MultusSubnet2Az2Cidr
      - Label:
          default: Fargate Profile Configuration
        Parameters:
          - FargateProfileName

Parameters:
  AvailabilityZones:
    Description: List of Availability Zones to use for the subnets in the VPC. Select 2 of them.
    AllowedPattern : ".+"
    Type: List<AWS::EC2::AvailabilityZone::Name>
  Vpc1Cidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.0.0/16
    Description: CIDR block for the Main VPC1.
    Type: String
  PubMgmtSubnetAz1Cidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.0.0/24
    Description: CIDR block for the Public Subnet in AZ1.
    Type: String
  PubMgmtSubnetAz2Cidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.1.0/24
    Description: CIDR block for the Public Subnet in AZ2.
    Type: String
  PrivK8sSubnetAz1Cidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.2.0/24
    Description: CIDR block for the Private Subnet in AZ1. This will be used for the main K8s network.
    Type: String
  PrivK8sSubnetAz2Cidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.3.0/24
    Description: CIDR block for the Private Subnet in AZ2. This will be used for the main K8s network.
    Type: String
  MultusSubnet1Az1Cidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.4.0/24
    Description: CIDR block for the Multus Subnet 1 in AZ1.
    Type: String
  MultusSubnet1Az2Cidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.5.0/24
    Description: CIDR block for the Multus Subnet 1 in AZ2.
    Type: String
  MultusSubnet2Az1Cidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.6.0/24
    Description: CIDR block for the Multus Subnet 2 in AZ1.
    Type: String
  MultusSubnet2Az2Cidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16–28
    Default: 10.0.7.0/24
    Description: CIDR block for the X-ENI Subnet 2 in AZ2.
    Type: String
  FargateProfileName:
    Type: String
    Default: "fargate-profile"
    Description: Name of the Fargate profile

Resources:

  Vpc1:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref Vpc1Cidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub "vpc1-${AWS::StackName}"

  Vpc1v6Cidr1:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      VpcId: !Ref Vpc1
      AmazonProvidedIpv6CidrBlock: true

  Vpc1v6Cidr2:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      VpcId: !Ref Vpc1
      AmazonProvidedIpv6CidrBlock: true

  ### IGW for the VPC
  Vpc1Igw:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "igw-${AWS::StackName}"
  Vpc1IgwAattach:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref Vpc1
      InternetGatewayId: !Ref Vpc1Igw

  #### Subnet-PublicMgmt #####
  PubMgmtSubnetAz1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc1
      CidrBlock: !Ref PubMgmtSubnetAz1Cidr
      AvailabilityZone: !Select ['0', !Ref AvailabilityZones]
      Tags:
        - Key: kubernetes.io/role/elb
          Value: 1
        - Key: Name
          Value: !Sub "pubMgmt-Az1-${AWS::StackName}"

  PubMgmtSubnetAz2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc1
      CidrBlock: !Ref PubMgmtSubnetAz2Cidr
      AvailabilityZone: !Select ['1', !Ref AvailabilityZones]
      Tags:
        - Key: kubernetes.io/role/elb
          Value: 1
        - Key: Name
          Value: !Sub "pubMgmt-Az2-${AWS::StackName}"

  PubMgmtSubnetRt:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc1
      Tags:
        - Key: Name
          Value: !Sub "pubMgmt-SubnetRt-${AWS::StackName}"

  PubMgmtRtDfltRt:
    Type: 'AWS::EC2::Route'
    DependsOn: Vpc1IgwAattach
    Properties:
      RouteTableId: !Ref PubMgmtSubnetRt
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref Vpc1Igw

  PubMgmtAz1RtAssoc:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PubMgmtSubnetAz1
      RouteTableId: !Ref PubMgmtSubnetRt
  PubMgmtAz2RtAssoc:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PubMgmtSubnetAz2
      RouteTableId: !Ref PubMgmtSubnetRt

  ### NATGWs for the VPC
  EipNatGwAz1:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: Vpc1
  NatGatewayAz1:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 'EipNatGwAz1.AllocationId'
      SubnetId: !Ref PubMgmtSubnetAz1
      Tags:
        - Key: Name
          Value: !Sub "natGwAz1-${AWS::StackName}"

  EipNatGwAz2:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: Vpc1
  NatGatewayAz2:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 'EipNatGwAz2.AllocationId'
      SubnetId: !Ref PubMgmtSubnetAz2
      Tags:
        - Key: Name
          Value: !Sub "natGwAz2-${AWS::StackName}"

  #### Subnet-PrivK8s #####
  PrivK8sSubnetAz1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc1
      CidrBlock: !Ref PrivK8sSubnetAz1Cidr
      AvailabilityZone: !Select ['0', !Ref AvailabilityZones]
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: 1
        - Key: Name
          Value: !Sub "PrivK8s-Az1-${AWS::StackName}"
        - Key: karpenter.sh/discovery
          Value: !Sub "eks-${AWS::StackName}"
  PrivK8sSubnetAz2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc1
      CidrBlock: !Ref PrivK8sSubnetAz2Cidr
      AvailabilityZone: !Select ['1', !Ref AvailabilityZones]
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: 1
        - Key: Name
          Value: !Sub "PrivK8s-Az2-${AWS::StackName}"
        - Key: karpenter.sh/discovery
          Value: !Sub "eks-${AWS::StackName}"

  ### Subnet Route Table for Private Subnets
  PrivK8sAz1SubnetRt:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc1
      Tags:
        - Key: Name
          Value: !Sub "PrivK8sAz1SubnetRt-${AWS::StackName}"
  PrivK8sAz2SubnetRt:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc1
      Tags:
        - Key: Name
          Value: !Sub "PrivK8sAz2SubnetRt-${AWS::StackName}"
  PrivK8sAz1DfltRt:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivK8sAz1SubnetRt
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayAz1
  PrivK8sAz2DfltRt:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivK8sAz2SubnetRt
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayAz2
  PrivK8sAz1RtAssoc:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivK8sSubnetAz1
      RouteTableId: !Ref PrivK8sAz1SubnetRt
  PrivK8sAz2RtAssoc:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivK8sSubnetAz2
      RouteTableId: !Ref PrivK8sAz2SubnetRt

  ### Create Multus Subnets and route table
  MultusSubnet1Az1:
    Type: 'AWS::EC2::Subnet'
    DependsOn: Vpc1v6Cidr1
    Properties:
      VpcId: !Ref Vpc1
      CidrBlock: !Ref MultusSubnet1Az1Cidr
      AvailabilityZone: !Select ['0', !Ref AvailabilityZones]
      Tags:
        - Key: Name
          Value: !Sub "Multus1Az1-${AWS::StackName}"

  MultusSubnet1Az2:
    Type: 'AWS::EC2::Subnet'
    DependsOn: Vpc1v6Cidr2
    Properties:
      VpcId: !Ref Vpc1
      CidrBlock: !Ref MultusSubnet1Az2Cidr
      AvailabilityZone: !Select ['1', !Ref AvailabilityZones]
      Tags:
        - Key: Name
          Value: !Sub "Multus1Az2-${AWS::StackName}"

  MultusSubnet2Az1:
    Type: 'AWS::EC2::Subnet'
    DependsOn: Vpc1v6Cidr1
    Properties:
      VpcId: !Ref Vpc1
      CidrBlock: !Ref MultusSubnet2Az1Cidr
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - SubnetPart: '01::/64'
            VpcPart: !Select [ 0, !Split [ '00::/56', !Select [ 0, !GetAtt Vpc1.Ipv6CidrBlocks ]]]
      # Ipv6Native: True
      AvailabilityZone: !Select ['0', !Ref AvailabilityZones]
      Tags:
        - Key: Name
          Value: !Sub "Multus2Az1-${AWS::StackName}"

  MultusSubnet2Az2:
    Type: 'AWS::EC2::Subnet'
    DependsOn: Vpc1v6Cidr2
    Properties:
      VpcId: !Ref Vpc1
      CidrBlock: !Ref MultusSubnet2Az2Cidr
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - SubnetPart: '01::/64'
            VpcPart: !Select [ 0, !Split [ '00::/56', !Select [ 1, !GetAtt Vpc1.Ipv6CidrBlocks ]]]
      # Ipv6Native: True
      AvailabilityZone: !Select ['1', !Ref AvailabilityZones]
      Tags:
        - Key: Name
          Value: !Sub "Multus2Az2-${AWS::StackName}"

  ### Subnet Route Table for Multus Subnets
  Multus1SubnetRt:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc1
      Tags:
        - Key: Name
          Value: !Sub "Multus1SubnetRt-${AWS::StackName}"
  Multus2SubnetRt:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc1
      Tags:
        - Key: Name
          Value: !Sub "Multus2SubnetRt-${AWS::StackName}"
  Multus1RtAssocAz1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref MultusSubnet1Az1
      RouteTableId: !Ref Multus1SubnetRt
  Multus1RtAssocAz2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref MultusSubnet1Az2
      RouteTableId: !Ref Multus1SubnetRt  
  Multus2RtAssocAz1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref MultusSubnet2Az1
      RouteTableId: !Ref Multus2SubnetRt   
  Multus2RtAssocAz2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref MultusSubnet2Az2
      RouteTableId: !Ref Multus2SubnetRt
  MultusAz1DfltRt1:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref Multus1SubnetRt
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayAz1
  MultusAz2DfltRt1:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref Multus2SubnetRt
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayAz2

  ### Security Groups ###
  Vpc1SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Vpc1SecurityGroup
      GroupDescription: Sec Group to allow intra VPC traffic
      VpcId: !Ref Vpc1
      SecurityGroupIngress:
        - CidrIp: !Ref Vpc1Cidr
          IpProtocol: -1
          FromPort: 0
          ToPort: 65535
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: "-1"
        - CidrIpv6: ::/0
          IpProtocol: "-1"
      Tags:
        - Key: "Name"
          Value: "Vpc1SecurityGroup"

  ## EKS cluster IAM Role ##
  EksIamRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - eks.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      RoleName: !Sub "eksIamRole-${AWS::StackName}"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
        - arn:aws:iam::aws:policy/AmazonEKSServicePolicy

  EksControlSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cluster communication with worker nodes
      VpcId: !Ref Vpc1
      Tags:
        - Key: karpenter.sh/discovery
          Value: !Sub "eks-${AWS::StackName}"
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: "-1"
        - CidrIpv6: ::/0
          IpProtocol: "-1"

  EksControlSecurityGroupInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: [EksControlSecurityGroup]
    Properties:
      IpProtocol: -1
      FromPort: -1
      ToPort: -1
      GroupId: !Ref EksControlSecurityGroup
      SourceSecurityGroupId: !GetAtt EksControlSecurityGroup.GroupId

  FargatePodExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: eks-fargate-pods.amazonaws.com
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - !Sub 'arn:aws:iam::aws:policy/AmazonEKSFargatePodExecutionRolePolicy'

  # EKS Cluster
  EksCluster:
    Type: AWS::EKS::Cluster
    Properties:
      Name: !Sub "eks-${AWS::StackName}"
      RoleArn: !GetAtt EksIamRole.Arn
      ResourcesVpcConfig:
        SecurityGroupIds:
          - !Ref EksControlSecurityGroup
        SubnetIds:
          - !Ref PubMgmtSubnetAz1
          - !Ref PubMgmtSubnetAz2
          - !Ref PrivK8sSubnetAz1
          - !Ref PrivK8sSubnetAz2
      Tags:
        - Key: Name
          Value: !Sub "eks-${AWS::StackName}"
        - Key: karpenter.sh/discovery
          Value: !Sub "eks-${AWS::StackName}"


  FargateProfile:
    Type: AWS::EKS::FargateProfile
    DependsOn: [EksCluster]
    Properties:
      ClusterName: !Sub "eks-${AWS::StackName}"
      PodExecutionRoleArn: !GetAtt FargatePodExecutionRole.Arn
      Selectors:
        - Namespace: kube-system
        - Namespace: karpenter
      FargateProfileName: !Ref FargateProfileName
      Subnets:
        - !Ref PrivK8sSubnetAz1
        - !Ref PrivK8sSubnetAz2

Outputs:
  Vpc1Id:
    Description: VPC ID
    Value: !Ref Vpc1
    Export:
      Name: !Sub "${AWS::StackName}-Vpc1Id"
  Vpc1Cidr:
    Description: VPC1 CIDR
    Value: !GetAtt Vpc1.CidrBlock
    Export:
      Name: !Sub "${AWS::StackName}-Vpc1Cidr"
  Vpc1v6Cidr1:
    Description: VPC1 IPV6 CIDR
    Value: !Select [0, !GetAtt 'Vpc1.Ipv6CidrBlocks']
    Export:
      Name: !Sub "${AWS::StackName}-Vpc1v6Cidr1"
  Vpc1v6Cidr2:
    Description: VPC1 IPV6 CIDR2
    Value: !Select [1, !GetAtt 'Vpc1.Ipv6CidrBlocks']
    Export:
      Name: !Sub "${AWS::StackName}-Vpc1v6Cidr2"
  EksCluster:
    Description: EKS Cluster Name
    Value: !Ref EksCluster
    Export:
      Name: !Sub "${AWS::StackName}-EksCluster"
  EksControlSecurityGroup:
    Description: EKS Control plane security group
    Value: !Ref EksControlSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-EksControlSecurityGroup"
  PubMgmtSubnetAz1:
    Description: EKS WorkerNode PublicSubnet at AZ1. This will be used for management network.
    Value: !Ref PubMgmtSubnetAz1
    Export:
      Name: !Sub "${AWS::StackName}-PubMgmtSubnetAz1"
  PubMgmtSubnetAz2:
    Description: EKS WorkerNode PublicSubnet at AZ2. This will be used for management network.
    Value: !Ref PubMgmtSubnetAz2
    Export:
      Name: !Sub "${AWS::StackName}-PubMgmtSubnetAz2"
  PrivK8sSubnetAz1:
    Description: EKS WorkerNode PrivateSubnet at AZ1. This will be used for NF's service network.
    Value: !Ref PrivK8sSubnetAz1
    Export:
      Name: !Sub "${AWS::StackName}-PrivK8sSubnetAz1"
  PrivK8sSubnetAz2:
    Description: EKS WorkerNode PrivateSubnet at AZ2. This will be used for NF's service network.
    Value: !Ref PrivK8sSubnetAz2
    Export:
      Name: !Sub "${AWS::StackName}-PrivK8sSubnetAz2"
  MultusSubnet1Az1:
    Description: Multus Primary Subnet1 at AZ1.
    Value: !Ref MultusSubnet1Az1
    Export:
      Name: !Sub "${AWS::StackName}-MultusSubnet1Az1"
  MultusSubnet1Az2:
    Description: Multus Primary Subnet1 at AZ2.
    Value: !Ref MultusSubnet1Az2
    Export:
      Name: !Sub "${AWS::StackName}-MultusSubnet1Az2"
  MultusSubnet2Az1:
    Description: Multus Primary Subnet2 at AZ1.
    Value: !Ref MultusSubnet2Az1
    Export:
      Name: !Sub "${AWS::StackName}-MultusSubnet2Az1"
  MultusSubnet2Az2:
    Description: Multus Primary Subnet2 at AZ2.
    Value: !Ref MultusSubnet2Az2
    Export:
      Name: !Sub "${AWS::StackName}-MultusSubnet2Az2"
  Vpc1SecurityGroup:
    Description: VPC1 security group
    Value: !Ref Vpc1SecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-Vpc1SecurityGroup"
